# opencode-watch

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.yaml  demo.sh  manage_all.sh  manage_monitor_17.sh  manage_monitor_19.sh  start_monitor_17.sh  start_monitor_19.sh  test_commands_config.yaml  test_monitor.rs
.github/workflows/: release.yml  test.yml
src/: activity.rs  animation.rs  app.rs  args.rs  config.rs  lib.rs  llm.rs  main.rs  monitor.rs  state.rs  tmux.rs
tests/: config_test.rs  integration_test.rs
